trunk/Archive2/49/581f61bf0c9369/output
main.cpp:1:57: error: expected template-name before '<' token
 template <class X> struct FreeListVector : public vector<X> {
                                                         ^
main.cpp:1:57: error: expected '{' before '<' token
main.cpp:1:57: error: expected unqualified-id before '<' token
main.cpp:18:2: warning: extra ';' [-Wpedantic]
 };
  ^
main.cpp:125:5: error: expected constructor, destructor, or type conversion before '(' token
 TEST(TypesTest, AVLTree) {
     ^
